# kanshig

./: .gitignore  AGENTS.md  BEADS.md  CHANGES.md  CODEBASE.md  Cargo.toml  KANSHIG-PLAN.md  Makefile  ORDER_1.md  README.md  devstral-2-small.sh  devstral-small-2-worker.yaml  devstral-small-2.sh  glm-4.7-flash-mini.yaml  kansig-plan.md  lcsa.sh  mini-lead.yaml  mini-worker.yaml  mini.yaml  model-glm-47-flash-22GB.sh  qwen3-coder-next-mini.yaml  qwen3-coder-next.sh  qwen3-worker.yaml  qwen35-27B.sh
.beads/: beads.db  beads.db-wal  issues.jsonl  issues.jsonl.backup  last-touched
.beads/.br_history/: issues.20260308_115603_099991846.jsonl  issues.20260308_121035_093229853.jsonl  issues.20260308_124215_352077387.jsonl  issues.20260308_124330_683581133.jsonl  issues.20260308_125707_226801123.jsonl  issues.20260308_132804_617032040.jsonl  issues.20260308_133001_714249419.jsonl  issues.20260308_133133_855521736.jsonl  issues.20260308_141937_244122019.jsonl  issues.20260308_142636_263853541.jsonl  issues.20260308_144451_142224249.jsonl  issues.20260308_151711_556276611.jsonl  issues.20260308_151816_776860215.jsonl  issues.20260308_152546_960247138.jsonl  issues.20260308_165102_064391146.jsonl  issues.20260308_165234_517595819.jsonl  issues.20260308_173743_454163054.jsonl  issues.20260308_173852_221738388.jsonl  issues.20260308_183913_850063543.jsonl  issues.20260308_184032_620457978.jsonl  issues.20260308_184443_782217974.jsonl  issues.20260308_184645_874916880.jsonl  issues.20260308_192905_831866120.jsonl  (+36 more)
kanshig/: Cargo.toml
kanshig-cli/: Cargo.toml
kanshig/src/: tui.rs  (+2 more)
(+14 files in other folders)
